<resources>
    <string name="app_name">Freshservice Support SDK</string>

    <string name="home">Home</string>
    <string name="ticket_list">Ticket List</string>
    <string name="report_incident">Report Incident</string>
    <string name="request_service">Request Service</string>
    <string name="approval_list">Approval List</string>
    <string name="logout">Logout</string>
    <string name="enter_domain_name">Enter domain name</string>

</resources>