<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        tools:context=".MainActivity">

    <Button
        android:id="@+id/home_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:onClick="home"
        />

    <Button
        android:id="@+id/ticket_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ticket_list"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:onClick="ticketList"
        />

    <Button
        android:id="@+id/report_incident"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_incident"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:onClick="reportIncident"
        />

    <Button
        android:id="@+id/request_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_service"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:onClick="requestService"
        />

    <Button
        android:id="@+id/approval_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/approval_list"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:onClick="approvalList"
        />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center_horizontal"
        android:onClick="logout"
 />

    </LinearLayout>
